# template_procurement_flow

./: .env.example  .gitignore  README.md  pyproject.toml
data/: procurement_policy.md
data/seed/: supplier_offers.json  suppliers.json
frontend/: .env.example  .gitignore  README.md  amp.py  app.py  db.py  requirements.txt
frontend/seed_data/: catalog_items.json  employees.json  suppliers.json
frontend/static/: app.js  style.css
frontend/templates/: index.html
src/procurement_flow/: main.py  procurement.py  types.py
src/procurement_flow/crews/intake_crew/: intake_crew.py
src/procurement_flow/crews/intake_crew/config/: agents.yaml  tasks.yaml
src/procurement_flow/crews/quote_review_crew/: quote_review_crew.py
src/procurement_flow/crews/quote_review_crew/config/: agents.yaml  tasks.yaml
src/procurement_flow/crews/screening_crew/: screening_crew.py
src/procurement_flow/crews/screening_crew/config/: agents.yaml  tasks.yaml
src/procurement_flow/crews/sourcing_crew/: sourcing_crew.py
src/procurement_flow/crews/sourcing_crew/config/: agents.yaml  tasks.yaml
src/procurement_flow/tools/: custom_tool.py  gmail_tools.py
tests/: test_portal.py  test_procurement.py
