[project]
name = "procurement_flow"
version = "0.1.0"
description = "procurement_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.1,<2.0.0"
]

[project.scripts]
kickoff = "procurement_flow.main:kickoff"
run_crew = "procurement_flow.main:kickoff"
plot = "procurement_flow.main:plot"
run_with_trigger = "procurement_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
