[project]
name = "procurement_flow"
version = "0.1.0"
description = "procurement_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "composio>=0.15.0",
    "composio-crewai>=0.18.0",
    "crewai[tools]>=1.15.5,<1.16.0",
    "reportlab>=4.4.3,<5",
]

[project.scripts]
kickoff = "procurement_flow.main:kickoff"
run_crew = "procurement_flow.main:kickoff"
plot = "procurement_flow.main:plot"
run_with_trigger = "procurement_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
